# kStock-mcp-server

./: .gitmodules  CMakeLists.txt  server.cpp  test.cpp
data/: stock_codes.json
include/api/: KInvestmentAPI.h  k_investment_api.h
include/handler/: handler.h
include/resreq/: APIRequest.h  APIResponse.h
include/tool/: tool.h
src/: CMakeLists.txt
src/api/: k_investment_api.cpp
src/handler/: handler.cpp
src/resreq/: APIRequest.cpp  APIResponse.cpp
test/: CMakeLists.txt  handler_test.cpp  resource_test.cpp
